namegenerator output fixed, won't screw layout up anymore when too long. displaying blog posts still not working

--- a/client/stylesheets/styles.scss
+++ b/client/stylesheets/styles.scss
@@ -70,7 +70,7 @@ nav {
 
   .social-media-icon-links {
     height: 100%;
-    width: auto;
+    //width: auto;
     margin: 0;
     padding: 0;
     padding-left: 10px;
@@ -104,7 +104,7 @@ nav {
   .menu-icon {
     display: none;
     position: fixed;
-    right: 0;
+    right: 0px;
     background-color: $transparent-black;
     padding: 10px 20px;
     color: white;
@@ -118,7 +118,7 @@ nav {
 
   .main-navigation {
     position: fixed;
-    right: 0;
+    right: 0px;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -649,6 +649,12 @@ main {
     padding: 10px;
     border: none;
   }
+
+  iframe {
+    padding: 10px;
+    height: auto;
+    font-family: 'Open Sans', 'Droid Sans', sans-serif;
+  }
 }
 
 
@@ -737,7 +743,8 @@ main {
   }
 
   i {
-    color: $bright-orange;
+    //color: $bright-orange;
+    color: $transparent-orange;
     font-size: 6em;
     padding: 0 20px;
   }
@@ -748,7 +755,8 @@ main {
 
   .poetkoe-namegenerator-input {
     display: block;
-    width: 335px;
+    max-width: 335px;
+    width: 90%;
     margin: auto auto;
     font-size: 20px;
     font-weight: 300;
@@ -774,7 +782,9 @@ main {
     border-radius: 5px;
     padding-left: 0px;
     padding-right: 0px;
-    background-color: $bright-orange;
+    //background-color: $bright-orange;
+    background-color: $transparent-orange;
+    //background-color: #999;
     color: white;
     cursor: pointer;
     box-shadow: 0px 2px 5px 0px $transparent-black;
@@ -1019,6 +1029,10 @@ footer {
       text-align: center;
 
     }
+  }
+
+  .coding .output {
+    margin: 10px;
   }
 
 
